--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Katari-Regular", Helvetica;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +8,17 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+:root {
+  --dark-mint: rgba(1, 123, 130, 1);
+  --dark-peach: rgba(255, 141, 132, 1);
+  --header-font-family: "Katari-Regular", Helvetica;
+  --header-font-size: 36px;
+  --header-font-style: normal;
+  --header-font-weight: 400;
+  --header-letter-spacing: 0px;
+  --header-line-height: normal;
+  --mint: rgba(143, 219, 215, 1);
+  --peach: rgba(255, 186, 163, 1);
 }
