--- a/frontend/src/pages/MainPage.css
+++ b/frontend/src/pages/MainPage.css
@@ -27,7 +27,7 @@
 }
 
 .content {
-    background-image: url(../assets/forefront.png);
+    background-image: url(../assets/forefront.svg);
     background-repeat: no-repeat;
     background-size: 33rem;
     background-position: left 2rem bottom -3rem;
