--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -2,7 +2,8 @@
     background-image: url(../assets/header.svg);
     background-repeat: no-repeat;
     background-size: 100vw auto;
-    height: 30vh;
+    height: 25vh;
+    min-height: 150px;
     width: 100vw;
 }
 
